# lion-openai

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  poetry.lock.backup  pyproject.toml  pyproject.toml.backup  requirements-dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release.yml
lion_openai/: OpenAIModel.py  OpenAIService.py  __init__.py  api.py  data_models.py  match_data_model.py
lion_openai/api_endpoints/: api_request.py  match_data_model.py  match_response.py
lion_openai/api_endpoints/audio/: __init__.py  speech_models.py  transcription_models.py  translation_models.py
lion_openai/api_endpoints/batch/: __init__.py  batch_models.py  cancel_batch.py  create_batch.py  list_batch.py  request_object_models.py  retrieve_batch.py
lion_openai/api_endpoints/embeddings/: __init__.py  request_body.py  response_body.py
lion_openai/api_endpoints/files/: __init__.py  delete_file.py  file_models.py  list_files.py  retrieve_file.py  upload_file.py
lion_openai/api_endpoints/fine_tuning/: __init__.py  cancel_jobs.py  create_jobs.py  fine_tuning_job_checkpoint_models.py  fine_tuning_job_event_models.py  fine_tuning_job_models.py  list_fine_tuning_checkpoints.py  list_fine_tuning_events.py  list_fine_tuning_jobs.py  retrieve_jobs.py  training_format.py
lion_openai/audio/: speech_models.py  transcription_models.py  translation_models.py
lion_openai/batch/: batch_models.py  create_batch.py  list_batch.py  request_object_models.py
lion_openai/chat_completions/: types.py  util.py
lion_openai/embeddings/: request_body.py  response_body.py
lion_openai/files/: delete_file.py  list_files.py
lion_openai/fine_tuning/: create_jobs.py  fine_tuning_job_checkpoint_models.py  fine_tuning_job_event_models.py  fine_tuning_job_models.py  list_fine_tuning_checkpoints.py  list_fine_tuning_events.py  list_fine_tuning_jobs.py  training_format.py
lion_openai/image_token_calculator/: image_token_calculator.py  openai_image_token_data.yaml
lion_openai/images/: image_edit_models.py  image_models.py  image_variation_models.py  response_body.py
lion_openai/models/: models_models.py
lion_openai/moderations/: request_body.py  response_body.py
lion_openai/uploads/: __init__.py  complete_upload.py  create_upload.py  uploads_models.py
scripts/: poetry_reinstall.sh
tests/: __init__.py  test_chat_completion.py  test_lion_api.py  test_openai_client.py
(+40 files in other folders)
