[tool.poetry]
name = "lion-openai"
version = "0.1.0"
description = "An asynchronous Python package for interacting with the Lion system API"
authors = ["LiangBingYan Luo, alina@lionagi.ai, Haiyang Li, ocean@lionagi.ai"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lion-agi/lion-openai"
repository = "https://github.com/lion-agi/lion-openai"
keywords = ["lion", "openai", "async", "api"]
packages = [{include = "lion_openai"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"
black = "^22.3"
flake8 = "^4.0"
isort = "^5.10"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
