[tool.poetry]
name = "lion-openai"
version = "0.1.5"
description = ""
authors = ["OceanLi <122793010+ohdearquant@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.5"
tiktoken = "^0.7.0"
pyyaml = "^6.0.2"
pillow = "^10.4.0"
lion-service = "0.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest-asyncio = "^0.24.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
ignore = ["E203", "W503", "E501", "E402"]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
