[project]
name = "lion-openai"
version = "1.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lion-service>=1.1.1",
    "pillow>=11.0.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
ignore = ["E203", "W503", "E501", "E402"]
max-line-length = 79
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
